--- a/client/app/app.css
+++ b/client/app/app.css
@@ -4,6 +4,13 @@
 /*@tailwind utilities;*/
 
 
+@layer base {
+    *,
+    ::after,
+    ::before {
+        border-color: #d3d3d3;
+    }
+}
 @theme {
     --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
